Spacing fix for playbutton

--- a/src/components/layout/musicPlayer/style.scss
+++ b/src/components/layout/musicPlayer/style.scss
@@ -17,6 +17,10 @@
   background-color: #eb3e77;
 }
 
+.rhap_controls-section {
+  flex: 0!important;
+}
+
 .song-title-wrapper {
   height: 50px;
   overflow: hidden;
